# ESP32-Light-Remote

./: .gitignore  CMakeLists.txt  esp_panel_board_supported_conf.h  partitions.csv  platformio.ini  sdkconfig.esp32s3box
include/: esp_lcd_touch.h  esp_lcd_touch_cst816s.h  esp_lcd_touch_cst820.h  lv_conf.h
include/app/: display_stack.hpp  home_screen.hpp  light_message.hpp  light_state.hpp  light_transport.hpp  preset_store.hpp  settings_store.hpp
src/: CMakeLists.txt  idf_component.yml  main.cpp
src/app/: display_stack.cpp  home_screen.cpp  light_transport.cpp  preset_store.cpp  settings_store.cpp
